# krai

./: Cargo.toml  README.md
docs/: guide.md  integers_and_floats.md
examples/: 01_variables.krai  02_functions.krai  03_scoped_functions.krai  04_recursion.krai  05_loop.krai  06_continue_expression.krai
src/: diagnostic.rs  main.rs  obj_file_ext.rs  operator.rs  span.rs
src/ir_gen/: error.rs  mod.rs  symbol.rs
src/lexer/: mod.rs  token.rs
src/parser/: ast.rs  mod.rs  ty.rs
src/sema/: mod.rs  symbol.rs  ty.rs
