[package]
name = "kraic"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
cranelift = "0.131.1"
cranelift-codegen = "0.131.1"
cranelift-frontend = "0.131.1"
cranelift-module = "0.131.1"
cranelift-native = "0.131.1"
cranelift-object = "0.131.1"
lasso = "0.7.3"
strsim = "0.11.1"
target-lexicon = "0.13.5"
tinycolor = "1.1.3"
